<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.appverse.web.showcases.gwt.rest</groupId>
    <artifactId>appverse-web-showcases-gwt-rest</artifactId>
    <version>1.4-MILESTONE_1</version>
    <packaging>pom</packaging>
    
    <name>GWT Showcase Rest</name>
    <description>GWT Showcase Rest</description>
	<url>http://appverse.org/projects/appverse-web/</url>
	<inceptionYear>2013</inceptionYear>

	<licenses>
		<license>
			<name>Mozilla Public License Version 2.0</name>
			<url>http://appverse.org/legal/appverse-license/</url>
			<distribution>repo</distribution>		
			<comments>
	 		Copyright (c) 2012 GFT Appverse, S.L., Sociedad Unipersonal.
			
			 This Source Code Form is subject to the terms of the Mozilla Public 
			 License, v. 2.0. If a copy of the MPL was not distributed with this 
			 file, You can obtain one at http://mozilla.org/MPL/2.0/. 
			
			 Redistribution and use in source and binary forms, with or without modification, 
			 are permitted provided that the conditions of the Mozilla Public License v2.0 
			 are met.
			
			 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
			 ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
			 WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
			 DISCLAIMED. EXCEPT IN CASE OF WILLFUL MISCONDUCT OR GROSS NEGLIGENCE, IN NO EVENT
			 SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
			 INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
			 LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
			 PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
			 WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT(INCLUDING NEGLIGENCE OR OTHERWISE) 
			 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
			 POSSIBILITY OF SUCH DAMAGE.
			</comments>
		</license>
	</licenses>

	<organization>
    	<name>Appverse</name>
    	<url>http://appverse.org</url>
  	</organization>

    <developers>
        <developer>
	        <id>sergi</id>
	        <name>Sergi Lanau Rodríguez</name>
	        <email>sergi@lanau.net</email>
	        <url>http://www.lanau.net</url>
	        <organization>Appverse</organization>
	        <organizationUrl>http://appverse.org</organizationUrl>
	        <roles>
	            <role>architect</role>
	            <role>developer</role>
	          </roles>
	          <timezone>+1</timezone>
	          <properties>
	            <gravatar>gravatar.com/slanau</gravatar>
	          </properties>
        </developer>
    </developers>
    
    <contributors>
    </contributors>
   
     <issueManagement>
    	<system>GitHub</system>
    	<url>https://github.com/Appverse/appverse-web/issues</url>
 	 </issueManagement>
 	 
	<ciManagement>
		<system>Jenkins</system>
	    <url>https://appverseweb-ci.ci.cloudbees.com</url>
	</ciManagement> 	 
   
  	<mailingLists>
    	<mailingList>
      		<name>User and Developers</name>
      		<subscribe>appverse+subscribe@googlegroups.com</subscribe>
     		<unsubscribe>appverse+unsubscribe@googlegroups.com</unsubscribe>
      		<post>appverse@googlegroups.com</post>
    	</mailingList>
    	
    	<mailingList>
      		<name>Questions and Answers</name>
      		<subscribe>appverse-qa+subscribe@googlegroups.com</subscribe>
      		<unsubscribe>appverse-qa+unsubscribe@googlegroups.com</unsubscribe>
     		<post>appverse-qa@googlegroups.com</post>
    	</mailingList>
    	
    	 <mailingList>
      		<name>Commits</name>
      		<subscribe>appverse-commits+subscribe@googlegroups.com</subscribe>
      		<unsubscribe>appverse-commits+unsubscribe@googlegroups.com</unsubscribe>
      		<post>appverse-commits@googlegroups.com</post>
    	</mailingList> 
    	   
     	<mailingList>
      		<name>Private</name>
        	<post>appverse-private@googlegroups.com</post>
    	</mailingList>          
    </mailingLists>   

	<scm>
		<connection>scm:git:https://${appverseweb.user.name}:${appverseweb.user.password}@github.com/Appverse/appverse-web.git</connection>
		<developerConnection>scm:git:https://${appverseweb.user.name}:${appverseweb.user.password}@github.com/Appverse/appverse-web.git</developerConnection>
		<tag>master</tag>
		<url>https://github.com/Appverse/appverse-web</url>
	</scm>

	<modules>
	    <module>backend</module>
	    <module>gwtfrontend</module>
	    <module>gwtshared</module>
	</modules>

 	<properties>
		<main.group>org.appverse.web.showcases.gwt</main.group>
		<main.name>appverse-web-showcases-gwt-rest</main.name>
		<app.context.root>showcase</app.context.root>
        <appverse.framework.version>1.4.1-MILESTONE_2</appverse.framework.version>
        <appverse.ddl-generator.version>1.0.5.1</appverse.ddl-generator.version>
        <gwt-version>2.6.1</gwt-version>
        <jersey.version>2.12</jersey.version>
    </properties>
	
 	<build>

        <defaultGoal>clean install</defaultGoal>

        <!-- If you want your default goal to deploy the application in a external
            Tomcat 7 server, uncomment the previous line and comment this one -->
        <!-- <defaultGoal>clean package tomcat7:deploy-only</defaultGoal> -->

 		
 		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<includeEmptyDirs>true</includeEmptyDirs>					
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
				</plugin>				

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.7</version>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.4</version>
				</plugin>		
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
				</plugin>	
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>		
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9</version>
				</plugin>	
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>				
				</plugin>							

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.6</version>				
				</plugin>

                <!-- Removed the declaration of the gwt-maven-plugin because servicePattern is only needed when async
                     interfaces are to be generated, in this project we are not even using GWT-RPC. -->

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>				
					<executions>
						<execution>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>target/generated-sources/gwt</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>

                <!-- maven-assembly-plugin and maven-dependency-plugin were removed because now GWT compilation happens
                     in the backend module where the war is built, so there is no need to create a zip in another
                     module to be unpacked in the war. -->

			    <plugin>
					<groupId>org.appverse.web.tools.jpaddlgenerator</groupId>
					<artifactId>appverse-web-tools-jpa-ddl-generator</artifactId>
					<version>${appverse.ddl-generator.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>generate-schema</goal>
							</goals>
							<phase>prepare-package</phase>
							<configuration>
                                <ddlOutputDir>${project.build.outputDirectory}/sql</ddlOutputDir>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.appverse.web.framework.modules.backend.core.persistence.eclipselink</groupId>
							<artifactId>appverse-web-modules-backend-core-persistence-eclipselink</artifactId>
                            <version>${appverse.framework.version}</version>
						</dependency>
					</dependencies>
				</plugin>

                <!-- Tomcat plugin setup. Requieres Tomcat7 installation and setup. You can use "tomcat7:deploy-only" to deploy
                     to Tomcat after main goal -->
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <server>tomcat</server>
                        <path>/${app.context.root}</path>
                        <url>${tomcat.manager.url}</url>
                        <update>true</update>
                    </configuration>
                </plugin>

                <!-- Embedded Jetty Maven plugin setup. You can use "mvn jetty:run-war" to start the showcase after main goal -->
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <configuration>
                        <httpConnector>
                            <port>8081</port>
                        </httpConnector>
                        <jvmArgs>-Xms256m -Xmx768m -XX:MaxPermSize=256m</jvmArgs>
                        <webAppConfig>
                            <contextPath>/${app.context.root}</contextPath>
                        </webAppConfig>

                        <webAppSourceDirectory>${basedir}/backend/src/main/webapp</webAppSourceDirectory>
                        <webXml>${basedir}/backend/src/main/webapp/WEB-INF/web.xml</webXml>
                        <classesDirectory>${basedir}/backend/target/backend${project.version}/WEB-INF/classes</classesDirectory>
                        <war>${basedir}/backend/target/backend-${project.version}</war>
                        <!--automatic reload disabled -->
                        <reload>manual</reload>
                        <scanIntervalSeconds>0</scanIntervalSeconds>
                        <scanTargets>
                            <scanTarget>src/main</scanTarget>
                        </scanTargets>
                        <scanTargetPatterns>
                            <scanTargetPattern>
                                <directory>${basedir}/backend/src/main/resources</directory>

                                <includes>
                                    <include>**/*.xml</include>
                                    <include>**/*.properties</include>
                                </includes>
                            </scanTargetPattern>
                        </scanTargetPatterns>
                    </configuration>
                </plugin>

			</plugins>		
		</pluginManagement>
 	</build>
   
  	<dependencyManagement>
		<dependencies>
            <!-- import the Appverse's dependencyManagement section -->
            <!-- I don't think it is a good idea to have this master pom defining all dependencies
                 for all modules. Why should we have a declaration for a module that our project will
                 not even use? -->
			<dependency>
				<groupId>org.appverse.web.framework.poms</groupId>
				<artifactId>appverse-web-masterpom</artifactId>
				<version>${appverse.framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
             <dependency>
                 <groupId>com.sencha.gxt</groupId>
                 <artifactId>gxt</artifactId>
                 <version>3.1.1</version>
             </dependency>
            <!-- Appverse uses GWT 2.5.1 but we want to use 2.6.1 -->
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-servlet</artifactId>
                <version>${gwt-version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-user</artifactId>
                <version>${gwt-version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.media</groupId>
                <artifactId>jersey-media-json-jackson</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.ext</groupId>
                <artifactId>jersey-spring3</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.core</groupId>
                <artifactId>jersey-client</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.containers</groupId>
                <artifactId>jersey-container-servlet</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.media</groupId>
                <artifactId>jersey-media-multipart</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <!-- This is required to run with "mvn gwt:run" or gwt:debug because provided dependencies are in the
                 classpath anyway.-->
            <dependency>
                <groupId>com.googlecode.gwt-validation</groupId>
                <artifactId>gwt-validation</artifactId>
                <version>2.1</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-simple</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
	</dependencyManagement>
  
  	<reporting>
    	<outputDirectory>${basedir}/target/site</outputDirectory>
    	<plugins>
      		<plugin>
        		<artifactId>maven-project-info-reports-plugin</artifactId>
				<reportSets>
				   <reportSet>
				   		<reports>
				   			<report>index</report>				   		
		                	<report>summary</report>		
		                	<report>license</report>		
		               		<report>project-team</report>			               
		                	<report>mailing-list</report>	
		                	<report>scm</report>		                	
			                <report>issue-tracking</report>
			                <report>cim</report>			                
		                	<report>modules</report>	
		               		<report>plugins</report>			                			               				                		   			
		               		<report>plugin-management</report>		
				   			<report>help</report>	
<!-- 				   			<report>dependencies</report> -->
				   			<report>dependency-convergence</report>				                
				   			<report>dependency-info</report>
			   				<report>dependency-management</report>					   			
				   			<report>distribution-management</report>		   			
				   		</reports>
				   </reportSet>
				</reportSets>
      		</plugin>
			<plugin>		
        		<artifactId>maven-surefire-report-plugin</artifactId>  
        		<version>2.14</version> 
        	</plugin>  
    		<plugin>		
        		<artifactId>maven-pmd-plugin</artifactId>  
        		<version>3.0</version> 	
        	</plugin>       	 		
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-checkstyle-plugin</artifactId>
	            <version>2.10</version>
	        </plugin>
	        <plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
	        	<artifactId>maven-jxr-plugin</artifactId>
	        <version>2.3</version>
	      </plugin>
    	</plugins>
  	</reporting>
  
	<profiles> 
		<profile> 
			<id>development</id> 
			<activation> 
				<activeByDefault>true</activeByDefault> 
			</activation> 
			<properties>
				<env>development</env>
				<maven.skip.tests>true</maven.skip.tests>
			</properties>			
			<build> 
				<pluginManagement> 
				  <plugins>
						<plugin> 
							<groupId>org.codehaus.mojo</groupId> 
							<artifactId>gwt-maven-plugin</artifactId> 				
							<configuration> 
								<extraJvmArgs>-Xms128m -Xmx768m -XX:MaxPermSize=256m</extraJvmArgs>
								<draftCompile>true</draftCompile> 
							</configuration> 
						</plugin> 
					</plugins>
				</pluginManagement> 
			</build> 	
		</profile> 

		<profile>
			<id>integration</id>
			<properties>
				<env>integration</env>
				<maven.skip.tests>false</maven.skip.tests>
			</properties>
		</profile>
	</profiles>
        <distributionManagement>
            <repository>
                <id>appverse-releases</id>
                <name>Internal Releases</name>
                <url>http://appverse.gftlabs.com/artifacts/content/repositories/releases</url>
            </repository>
            <snapshotRepository>
                <id>appverse-snapshots</id>
                <name>Internal Snapshots</name>
                <url>http://appverse.gftlabs.com/artifacts/content/repositories/snapshots/</url>
            </snapshotRepository>
        </distributionManagement>        
</project>